# chitra.ai

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: app.py  config.py  main.py
app/agent/: data-capture-agent.py
app/agents/: analysis.py  data_capture.py  report.py  workflow.py
app/api/: analyze.py  health.py
app/model/: model.py
templates/: index.html
tests/: test_smoke.py
