[project]
name = "chitra-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "openai>=2.46.0",
    "python-dotenv>=1.1.1",
    "sendgrid>=6.12.5",
    "uvicorn[standard]>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
